--- a/splash/templates/splash/index.html
+++ b/splash/templates/splash/index.html
@@ -59,7 +59,7 @@
               {% for task in tasks %}
                 {% if task.isComplete %}
                   <div class="tasks-list-item complete-task">
-                  <h2><span class="task-title"><s>{{task.title}}</s>  TASK COMPLETED</span></h2>
+                  <h2 style="color:green;"><span class="task-title"><s>{{task.title}}</s>  ✓TASK COMPLETED✓</span></h2>
                   <h3><span class="task-description"><s><i>{{task.description}}</i></s></span></h3>
                   <form action='/tasks/toggle/{{task.id}}/' method="POST">
                     {% csrf_token %}
